--- a/application/signup/static/css/common/_layout_ext.scss
+++ b/application/signup/static/css/common/_layout_ext.scss
@@ -24,6 +24,9 @@
   @include box-sizing(border-box);
 }
 
+.column-half--static {
+  @include grid-column-static( 1/2 );
+}
 .column-third--static {
   @include grid-column-static( 1/3 );
 }
